--- a/flash/pom.xml
+++ b/flash/pom.xml
@@ -46,6 +46,26 @@
     <version>1.2.5</version>
     <scope>test</scope>
 </dependency>
+
+<dependency>
+ <groupId>com.vimalselvam</groupId>
+ <artifactId>cucumber-extentsreport</artifactId>
+ <version>3.0.2</version>
+</dependency>
+
+<dependency>
+ <groupId>com.aventstack</groupId>
+ <artifactId>extentreports</artifactId>
+ <version>3.1.2</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>4.1.2</version>
+</dependency>
+
   </dependencies>
   
   <build>
